--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,24 @@
-
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-
 }
 
-body{
+body {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.4;
-
 }
 
-a{
+a {
   color: #333;
   text-decoration: none;
 }
 
-.container{
+.App {
   padding: 0 1rem;
 }
 
-.btn{
+.btn {
   display: inline-block;
   border: none;
   background: #555;
@@ -30,6 +27,10 @@ a{
   cursor: pointer;
 }
 
-.btn:hover{
+.input {
+  margin: 5px;
+}
+
+.btn:hover {
   background: #666;
 }
