--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,67 @@ a {
   color: #fff;
   padding: 7px 20px;
   cursor: pointer;
+  border-radius: 5%;
+  font-size: 20px;
+}
+.btn-del {
+  position: relative;
+  top: -65px;
+}
+
+.btn-del:hover {
+  transform: scale(1.1);
+  opacity: 0.8;
+}
+.checkbox {
+  cursor: pointer;
+  position: relative;
+  top: 3.7vh;
+  left: 0.2vw;
+  height: 20px;
+  width: 20px;
+  z-index: 100;
+  -webkit-appearance: none;
+}
+.checkbox-wrapper {
+  position: relative;
+}
+.todo-item-text {
+  display: flex;
+  position: relative;
+  font-size: 20px;
+  font-weight: 400;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 20px;
+}
+.todo-item-text::before,
+.todo-item-text::after {
+  pointer-events: none;
+}
+.todo-item-text::before {
+  display: flex;
+  content: " ";
+  height: 20px;
+  width: 20px;
+  border: solid 3px #000000;
+  background: #fff;
+  margin-right: 10px;
+}
+.todo-item-text::after {
+  position: absolute;
+  top: 8px;
+  left: 7px;
+  display: flex;
+  content: " ";
+  height: 12px;
+  width: 12px;
+  background: #000;
+  transform: scale(0);
+  transition: transform 0.3s ease;
+}
+.checkbox:checked + .todo-item-text::after {
+  transform: scale(1);
 }
 
 .input {
@@ -33,4 +94,25 @@ a {
 
 .btn:hover {
   background: #666;
+}
+
+.header-link {
+  font-size: 32px;
+  margin: 15px;
+}
+
+.header-link:hover {
+  font-size: 36px;
+}
+
+.about h1 {
+  margin: 10px;
+  padding: 5px;
+  font-size: 50px;
+  text-decoration: underline;
+}
+.about p {
+  margin: 10px;
+  padding: 5px;
+  font-size: 20px;
 }
